--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <h1>Este es un sitio web con Github pages</h1>
 <p>Y fue creado con amor para el curso de Git y Github de Platzi</p>
-<p><img src="https://imgur.com/gallery/LwDGqdB" /></p>
+<p><img src="https://i.imgur.com/bChIg0Z.mp4" /></p>
 
