--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <h1>Este es un sitio web con Github pages</h1>
 <p>Y fue creado con amor para el curso de Git y Github de Platzi</p>
-<p><img src="https://i.imgur.com/bChIg0Z.mp4" /></p>
+<p><img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fmedia.giphy.com%2Fmedia%2F7SF5scGB2AFrgsXP63%2Fgiphy.gif&imgrefurl=https%3A%2F%2Fwww.nintenderos.com%2F2021%2F12%2Fpikachu-de-pokemon-se-cuela-en-el-top-5-de-los-gifs-mas-usados-en-2021%2F&tbnid=MhBppH92kFC1kM&vet=12ahUKEwiGyuaq95n3AhUCId8KHevICE8QMygEegUIARCTAg..i&docid=ciMpN_jppQQH-M&w=500&h=283&q=gif&client=firefox-b-d&ved=2ahUKEwiGyuaq95n3AhUCId8KHevICE8QMygEegUIARCTAg" /></p>
 
