--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <h1>Este es un sitio web con Github pages</h1>
 <p>Y fue creado con amor para el curso de Git y Github de Platzi</p>
-<p><img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Flacarnemagazine.com%2Fpunk-la-verdadera-historia-de-una-revolucion%2F&psig=AOvVaw31olh6bfjUwDqJcrZ5Uwog&ust=1650244994376000&source=images&cd=vfe&ved=0CAwQjRxqFwoTCKDI3On3mfcCFQAAAAAdAAAAABAD" /><p>
+<p><img src="punk.jpg" /><p>
+ 
